# cache_simulator

./: .gitlint  .pre-commit-config.yaml  .secrets.baseline  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: release.yml  testing.yml
cache_simulator/: __init__.py
cache_simulator/cache_dataset/: __init__.py  cache.py  cache_dataset.py
cache_simulator/cache_dataset/patterns/: __init__.py  base.py  heap.py  loop.py  random_access.py  sequential.py  stack.py  stride.py
docs/: mkdocs.yml
docs/docs/: index.md
examples/cache_dataset/: README.md  __init__.py  demo_cache_dataset.py
tests/: test_trivial.py
tests/cache_dataset/: __init__.py  conftest.py  mocks.py  test_cache_general.py  test_cache_initialization.py  test_dataset_generation.py  test_dataset_init.py  test_dataset_iteration.py  test_direct_mapped_cache.py  test_fully_associative_cache.py
tests/cache_dataset/patterns/: __init__.py  test_base.py  test_heap.py  test_loop.py  test_random_access.py  test_sequential.py  test_stack.py  test_stride.py
tests/test_cache_dataset/: conftest.py  test_set_associative_cache.py
typings/cache_simulator/cache_dataset/: cache_dataset.pyi
